crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__async_closure_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn run() -> Result<f64, Box<dyn std::error::Error>> {
    let _smelt_tmp_2 = ::std::rc::Rc::new(move |closure_arg_0: f64| { SmeltFuture::from_future_primed(Box::pin(async move {
        let smelt_async_value = {
    let _smelt_tmp_1: f64 = closure_arg_0.clone() + 1.0;
    _smelt_tmp_1.clone()
        };
        Ok::<f64, Box<dyn std::error::Error>>(smelt_async_value)
    }) as ::std::pin::Pin<Box<dyn ::std::future::Future<Output = Result<f64, Box<dyn std::error::Error>>>>>) });
    let lift = _smelt_tmp_2.clone();
    let _smelt_tmp_3: SmeltFuture<f64> = (lift)(4.0);
    let _smelt_tmp_4: f64 = _smelt_tmp_3.await?;
    let result: f64 = _smelt_tmp_4;
    return Ok(result);
}

fn main() {
    return;
}
