crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__async_rejects_to_throw_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

async fn fail() -> Result<(), Box<dyn std::error::Error>> {
    return Err::<_, Box<dyn std::error::Error>>(smelt_throw(SmeltUnknown::String("boom".into())));
}

#[tokio::test]
async fn test_rejects() -> Result<(), Box<dyn std::error::Error>> {
    let _smelt_tmp_4: bool;
    let _smelt_tmp_5: bool;
    let _smelt_tmp_6: bool;
    let _smelt_tmp_7: ();
    let mut did_throw: bool = false;
    match ::std::panic::catch_unwind(::std::panic::AssertUnwindSafe(|| fail())) {
        Ok(__smelt_value) => {
            let _smelt_tmp_2 = __smelt_value;
    match _smelt_tmp_2.await {
        Ok(__smelt_value) => {
            let _smelt_tmp_3: () = { let _ = __smelt_value; };
        }
        Err(__smelt_error) => {
            let error = __smelt_error.to_string();
    did_throw = true;
    _smelt_tmp_4 = error.contains(&"boom".to_owned());
    _smelt_tmp_5 = !(_smelt_tmp_4);
    if _smelt_tmp_5 {
    return Err::<_, Box<dyn std::error::Error>>(smelt_throw(SmeltUnknown::String("expect(...).rejects.toThrow(...) message failed".into())));
    } else {
    }
        }
    }
        }
        Err(__smelt_panic) => {
            let __smelt_error = smelt_panic_message(&*__smelt_panic);
            let error = __smelt_error;
    did_throw = true;
    _smelt_tmp_4 = error.contains(&"boom".to_owned());
    _smelt_tmp_5 = !(_smelt_tmp_4);
    if _smelt_tmp_5 {
    return Err::<_, Box<dyn std::error::Error>>(smelt_throw(SmeltUnknown::String("expect(...).rejects.toThrow(...) message failed".into())));
    } else {
    }
        }
    }
    _smelt_tmp_6 = !(did_throw);
    if _smelt_tmp_6 {
    return Err::<_, Box<dyn std::error::Error>>(smelt_throw(SmeltUnknown::String("expect(...).rejects.toThrow(...) failed: expect(fail()).rejects.toThrow(\"boom\") (<memory>:9:9)".into())));
    } else {
    _smelt_tmp_7 = ();
    return Ok(());
    }
}

fn main() {}
