crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__basic_function_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn add(left: f64, right: f64) -> f64 {
    let _smelt_tmp_2: f64 = left.clone() + right.clone();
    return _smelt_tmp_2;
}

fn main() {
    let total: f64;
    let _smelt_tmp_1: f64 = add(2.0, 3.0);
    total = _smelt_tmp_1;
    return;
}
