crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__captured_multi_arg_callback_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn zip(first: SmeltList<SmeltUnknown>, second: SmeltList<SmeltUnknown>, fn_: &dyn Fn(&SmeltUnknown, &SmeltUnknown, f64, &SmeltList<SmeltUnknown>) -> SmeltUnknown) -> SmeltList<SmeltUnknown> {
    let _smelt_tmp_3 = ::std::rc::Rc::new({
    let first = first.clone();
    let second = second.clone();
    move |closure_arg_0: &SmeltUnknown, closure_arg_1: i64, closure_arg_2: &SmeltList<SmeltUnknown>| {
    let _smelt_tmp_6: SmeltUnknown = fn_(closure_arg_0, &second.borrow().get({ let smelt_normalized = closure_arg_1 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| SmeltUnknown::Undefined), closure_arg_1 as f64, &first);
    _smelt_tmp_6.clone()
    }
});
    let _smelt_tmp_4: SmeltList<SmeltUnknown> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new({
    let first = first.clone();
    let second = second.clone();
    move |closure_arg_0: &SmeltUnknown, closure_arg_1: i64, closure_arg_2: &SmeltList<SmeltUnknown>| {
    let _smelt_tmp_6: SmeltUnknown = fn_(closure_arg_0, &second.borrow().get({ let smelt_normalized = closure_arg_1 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| SmeltUnknown::Undefined), closure_arg_1 as f64, &first);
    _smelt_tmp_6.clone()
    }
}); let smelt_array = first.clone(); smelt_array.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item, index as i64, &smelt_array) }).collect::<Vec<_>>() });
    return _smelt_tmp_4;
}

fn main() {
    return;
}
