crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__closure_capture_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

/// `Number::toString(value, 10)`: JavaScript's number formatting.
///
/// Exponential notation at `n > 21` and `n <= -6`, where `n` is the
/// decimal exponent of the shortest round-trip digit string — which is
/// what Rust's `{:e}` already produces.
fn smelt_number_to_string<N: ::std::borrow::Borrow<f64>>(value: N) -> String {
    let value = *value.borrow();
    if value.is_nan() { return "NaN".to_owned(); }
    if value == 0.0 { return "0".to_owned(); }
    if value < 0.0 { return format!("-{}", smelt_number_to_string(-value)); }
    if value.is_infinite() { return "Infinity".to_owned(); }
    let exponential = format!("{value:e}");
    let (mantissa, exponent) = exponential.split_once('e').unwrap_or((exponential.as_str(), "0"));
    let digits: String = mantissa.chars().filter(char::is_ascii_digit).collect();
    let k = i32::try_from(digits.len()).unwrap_or(i32::MAX);
    let n = exponent.parse::<i32>().unwrap_or(0) + 1;
    if k <= n && n <= 21 {
        let zeros = usize::try_from(n - k).unwrap_or(0);
        return digits + &"0".repeat(zeros);
    }
    if 0 < n && n <= 21 {
        let split = usize::try_from(n).unwrap_or(0);
        return format!("{}.{}", &digits[..split], &digits[split..]);
    }
    if -6 < n && n <= 0 {
        let zeros = usize::try_from(-n).unwrap_or(0);
        return format!("0.{}{}", "0".repeat(zeros), digits);
    }
    let sign = if n - 1 < 0 { '-' } else { '+' };
    let magnitude = (n - 1).abs();
    if k == 1 { return format!("{digits}e{sign}{magnitude}"); }
    format!("{}.{}e{sign}{magnitude}", &digits[..1], &digits[1..])
}

/// `console.log`'s number formatting: the spec's rule, but `-0` prints `-0`.
fn smelt_console_number<N: ::std::borrow::Borrow<f64>>(value: N) -> String { let value = *value.borrow(); if value == 0.0 && value.is_sign_negative() { return "-0".to_owned(); } smelt_number_to_string(value) }

thread_local! {
    static SMELT_NEXT_CAPTURE_SCOPE: ::std::cell::Cell<usize> = const { ::std::cell::Cell::new(1) };
    static SMELT_SHARED_CAPTURES: ::std::cell::RefCell<::std::collections::HashMap<(usize, usize), ::std::rc::Weak<dyn ::std::any::Any>>> = ::std::cell::RefCell::new(::std::collections::HashMap::new());
}

fn smelt_next_capture_scope() -> usize {
    SMELT_NEXT_CAPTURE_SCOPE.with(|next| { let id = next.get(); next.set(id.saturating_add(1)); id })
}

fn smelt_shared_capture<T: Clone + 'static>(scope: usize, slot: *mut T, initial: T) -> ::std::rc::Rc<::std::cell::RefCell<T>> {
    let key = (scope, slot as usize);
    SMELT_SHARED_CAPTURES.with(|captures| {
        let mut captures = captures.borrow_mut();
        if let Some(existing) = captures.get(&key).and_then(::std::rc::Weak::upgrade) {
            return existing.downcast::<::std::cell::RefCell<T>>().expect("shared capture type mismatch");
        }
        let value: ::std::rc::Rc<::std::cell::RefCell<T>> = ::std::rc::Rc::new(::std::cell::RefCell::new(initial));
        let erased: ::std::rc::Rc<dyn ::std::any::Any> = value.clone();
        captures.insert(key, ::std::rc::Rc::downgrade(&erased));
        value
    })
}

// @smelt:prelude-end — generated program below
fn make_adder(base: f64) -> ::std::rc::Rc<dyn Fn(f64) -> f64> {
    let _smelt_tmp_1 = ::std::rc::Rc::new({
    let base = base.clone();
    move |closure_arg_0: f64| {
    let _smelt_tmp_2: f64 = closure_arg_0 + base;
    _smelt_tmp_2
    }
});
    return _smelt_tmp_1.clone();
}

fn main() {
    return;
}
