crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__collection_callback_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
assertion_line: 24
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn double(values: Vec<f64>) -> Vec<f64> {
    let _smelt_tmp_1 = ::std::rc::Rc::new(|closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: Vec<f64>| {
    let _smelt_tmp_3: f64 = closure_arg_0.clone() * 2.0;
    _smelt_tmp_3.clone()
    });
    let _smelt_tmp_2: Vec<f64> = { let mut smelt_callback = ::std::rc::Rc::new(|closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: Vec<f64>| {
    let _smelt_tmp_3: f64 = closure_arg_0.clone() * 2.0;
    _smelt_tmp_3.clone()
    }); let smelt_array = values.clone(); smelt_array.iter().enumerate().map(|(index, item)| { (smelt_callback)(item.clone(), index as i64, smelt_array.clone()) }).collect::<Vec<_>>() };
    return _smelt_tmp_2.clone();
}

fn main() {
    return;
}
