crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__control_flow_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

/// `Number::toString(value, 10)`: JavaScript's number formatting.
///
/// Exponential notation at `n > 21` and `n <= -6`, where `n` is the
/// decimal exponent of the shortest round-trip digit string — which is
/// what Rust's `{:e}` already produces.
fn smelt_number_to_string<N: ::std::borrow::Borrow<f64>>(value: N) -> String {
    let value = *value.borrow();
    if value.is_nan() { return "NaN".to_owned(); }
    if value == 0.0 { return "0".to_owned(); }
    if value < 0.0 { return format!("-{}", smelt_number_to_string(-value)); }
    if value.is_infinite() { return "Infinity".to_owned(); }
    let exponential = format!("{value:e}");
    let (mantissa, exponent) = exponential.split_once('e').unwrap_or((exponential.as_str(), "0"));
    let digits: String = mantissa.chars().filter(char::is_ascii_digit).collect();
    let k = i32::try_from(digits.len()).unwrap_or(i32::MAX);
    let n = exponent.parse::<i32>().unwrap_or(0) + 1;
    if k <= n && n <= 21 {
        let zeros = usize::try_from(n - k).unwrap_or(0);
        return digits + &"0".repeat(zeros);
    }
    if 0 < n && n <= 21 {
        let split = usize::try_from(n).unwrap_or(0);
        return format!("{}.{}", &digits[..split], &digits[split..]);
    }
    if -6 < n && n <= 0 {
        let zeros = usize::try_from(-n).unwrap_or(0);
        return format!("0.{}{}", "0".repeat(zeros), digits);
    }
    let sign = if n - 1 < 0 { '-' } else { '+' };
    let magnitude = (n - 1).abs();
    if k == 1 { return format!("{digits}e{sign}{magnitude}"); }
    format!("{}.{}e{sign}{magnitude}", &digits[..1], &digits[1..])
}

/// `console.log`'s number formatting: the spec's rule, but `-0` prints `-0`.
fn smelt_console_number<N: ::std::borrow::Borrow<f64>>(value: N) -> String { let value = *value.borrow(); if value == 0.0 && value.is_sign_negative() { return "-0".to_owned(); } smelt_number_to_string(value) }

thread_local! {
    static SMELT_NEXT_OBJECT_ID: ::std::cell::Cell<usize> = const { ::std::cell::Cell::new(1) };
}

#[allow(dead_code)]
fn smelt_next_object_id() -> usize {
    SMELT_NEXT_OBJECT_ID.with(|next| { let id = next.get(); next.set(id.saturating_add(1)); id })
}

/// A JavaScript array: a reference identity plus a shared backing buffer.
pub struct SmeltList<T> {
    id: usize,
    values: ::std::rc::Rc<::std::cell::RefCell<Vec<T>>>,
}
impl<T: ::std::fmt::Debug> ::std::fmt::Debug for SmeltList<T> { fn fmt(&self, formatter: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result { self.values.borrow().fmt(formatter) } }
impl<T> Clone for SmeltList<T> { fn clone(&self) -> Self { Self { id: self.id, values: ::std::rc::Rc::clone(&self.values) } } }
#[allow(dead_code)]
impl<T> SmeltList<T> {
    /// Create an identity-bearing typed list with a fresh JS reference identity.
    fn new(values: Vec<T>) -> Self { Self { id: smelt_next_object_id(), values: ::std::rc::Rc::new(::std::cell::RefCell::new(values)) } }
    /// Reuse a caller-supplied identity so an erase/extract round-trip stays `===` equal.
    fn with_id(id: usize, values: Vec<T>) -> Self { Self { id, values: ::std::rc::Rc::new(::std::cell::RefCell::new(values)) } }
    /// Reuse an existing shared buffer, so a re-wrap keeps aliasing the same array.
    fn with_storage(id: usize, values: ::std::rc::Rc<::std::cell::RefCell<Vec<T>>>) -> Self { Self { id, values } }
    /// Another handle on this array's shared buffer.
    fn storage(&self) -> ::std::rc::Rc<::std::cell::RefCell<Vec<T>>> { ::std::rc::Rc::clone(&self.values) }
    /// JS reference identity of this list.
    fn id(&self) -> usize { self.id }
    /// Borrow the backing storage for reading. The guard lives to the end of the
    /// enclosing statement; never pair it with `borrow_mut` in one expression.
    fn borrow(&self) -> ::std::cell::Ref<'_, Vec<T>> { self.values.borrow() }
    /// Borrow the backing storage for writing, through the shared cell — so this
    /// takes `&self`, and every other handle on the array observes the write.
    fn borrow_mut(&self) -> ::std::cell::RefMut<'_, Vec<T>> { self.values.borrow_mut() }
    /// Element count, taking its own short-lived borrow.
    fn len(&self) -> usize { self.values.borrow().len() }
    /// Whether the array holds no elements.
    fn is_empty(&self) -> bool { self.values.borrow().is_empty() }
    /// Replace every element in place, so aliases observe the new contents.
    fn replace_all(&self, values: Vec<T>) { *self.values.borrow_mut() = values; }
}
#[allow(dead_code)]
impl<T: Clone> SmeltList<T> {
    /// A JS array copy (`[...a]`, `slice`): same contents, a NEW identity AND a
    /// new buffer. This is the operation that keeps sharing from over-sharing.
    fn fresh_copy(&self) -> Self { Self::new(self.values.borrow().clone()) }
    /// Snapshot the elements. This COPIES unless this is the last handle, so
    /// mutating the result does not write back.
    fn into_vec(self) -> Vec<T> { match ::std::rc::Rc::try_unwrap(self.values) { Ok(cell) => cell.into_inner(), Err(shared) => shared.borrow().clone() } }
    /// Snapshot the elements without consuming the handle.
    fn to_vec(&self) -> Vec<T> { self.values.borrow().clone() }
    /// Read one element by index, cloned out of the shared buffer (JS `arr[i]`).
    fn get_index(&self, index: usize) -> Option<T> { self.values.borrow().get(index).cloned() }
    /// Set the element at a numeric index, extending with `fill` holes to match JS `arr[i] = v`.
    fn set_index(&self, index: usize, value: T, fill: T) { let mut values = self.values.borrow_mut(); if index >= values.len() { values.resize(index.saturating_add(1), fill); } values[index] = value; }
    /// Iterate a snapshot of the elements, so the buffer is not borrowed across the loop body.
    fn iter(&self) -> ::std::vec::IntoIter<T> { self.values.borrow().clone().into_iter() }
}
impl<T> From<Vec<T>> for SmeltList<T> { fn from(values: Vec<T>) -> Self { Self::new(values) } }
impl<T> ::std::iter::FromIterator<T> for SmeltList<T> { fn from_iter<I: IntoIterator<Item = T>>(iter: I) -> Self { Self::new(iter.into_iter().collect()) } }
impl<T: Clone> IntoIterator for SmeltList<T> { type Item = T; type IntoIter = ::std::vec::IntoIter<T>; fn into_iter(self) -> Self::IntoIter { self.into_vec().into_iter() } }
impl<T: Clone> IntoIterator for &SmeltList<T> { type Item = T; type IntoIter = ::std::vec::IntoIter<T>; fn into_iter(self) -> Self::IntoIter { self.values.borrow().clone().into_iter() } }
impl<T: PartialEq> PartialEq for SmeltList<T> { fn eq(&self, other: &Self) -> bool { *self.values.borrow() == *other.values.borrow() } }
impl<T: PartialEq> Eq for SmeltList<T> {}
impl<T: ::std::hash::Hash> ::std::hash::Hash for SmeltList<T> { fn hash<H: ::std::hash::Hasher>(&self, state: &mut H) { self.values.borrow().hash(state); } }
impl<T> Default for SmeltList<T> { fn default() -> Self { Self::new(Vec::new()) } }
impl<T: Clone> From<SmeltList<T>> for Vec<T> { fn from(list: SmeltList<T>) -> Self { list.into_vec() } }

// @smelt:prelude-end — generated program below
fn count_positive(values: SmeltList<f64>) -> f64 {
    let mut value: f64;
    let mut _smelt_tmp_4: f64;
    let mut _smelt_tmp_5: bool;
    let mut _smelt_tmp_6: bool;
    let mut _smelt_tmp_7: f64;
    let mut count: f64 = 0.0;
    let mut _smelt_tmp_3: f64 = 0.0;
    loop {
    _smelt_tmp_4 = values.len() as f64;
    _smelt_tmp_5 = _smelt_tmp_3 < _smelt_tmp_4;
    if !(_smelt_tmp_5) { break; }
    value = values.borrow().get({ let smelt_normalized = _smelt_tmp_3 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| 0.0);
    _smelt_tmp_6 = value > 0.0;
    if _smelt_tmp_6 {
    _smelt_tmp_7 = count + 1.0;
    count = _smelt_tmp_7;
    _smelt_tmp_3 = _smelt_tmp_3 + 1.0;
    continue;
    } else {
    _smelt_tmp_3 = _smelt_tmp_3 + 1.0;
    continue;
    }
    }
    return count;
}

fn main() {
    return;
}
