crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__do_while_control_flow_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn first_outside(value: f64) -> f64 {
    let mut _smelt_tmp_3: f64;
    let mut _smelt_tmp_4: bool;
    let mut _smelt_tmp_5: bool;
    let mut previous: f64 = value.clone();
    let mut current: f64 = value.clone();
    loop {
    if !(true) { break; }
    previous = current.clone();
    _smelt_tmp_3 = current - 1.0;
    current = _smelt_tmp_3;
    _smelt_tmp_4 = current.clone() > 0.0;
    _smelt_tmp_5 = !(_smelt_tmp_4);
    if _smelt_tmp_5 {
    break;
    } else {
    continue;
    }
    }
    return previous;
}

fn main() {
    return;
}
