crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__erased_coercion_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn erase(value: f64) -> SmeltUnknown {
    let _smelt_tmp_1: SmeltUnknown = SmeltUnknown::Number(value.clone() as f64);
    return _smelt_tmp_1;
}

fn main() {
    return;
}
