crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__first_class_closure_value_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn make_adder(base: f64) -> ::std::rc::Rc<dyn Fn(f64) -> f64> {
    let _smelt_tmp_2: f64 = base.clone() + 1.0;
    let offset: f64 = _smelt_tmp_2;
    let _smelt_tmp_3 = ::std::rc::Rc::new({
    let offset = offset.clone();
    move |closure_arg_0: f64| {
    let _smelt_tmp_2: f64 = closure_arg_0.clone() + offset.clone();
    _smelt_tmp_2.clone()
    }
});
    return _smelt_tmp_3.clone();
}

fn main() {
    let adder: ::std::rc::Rc<dyn Fn(f64) -> f64>;
    let result: f64;
    let _smelt_tmp_3: f64;
    let _smelt_tmp_2 = make_adder(2.0).clone();
    adder = { let smelt_fn = _smelt_tmp_2.clone(); ::std::rc::Rc::new(move |arg0: f64| -> f64 { (smelt_fn)(arg0).smelt_into_f64() }) };
    _smelt_tmp_3 = (adder)(3.0);
    result = _smelt_tmp_3;
    return;
}
