crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__generated_test_function_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

/// `Number::toString(value, 10)`: JavaScript's number formatting.
///
/// Exponential notation at `n > 21` and `n <= -6`, where `n` is the
/// decimal exponent of the shortest round-trip digit string — which is
/// what Rust's `{:e}` already produces.
fn smelt_number_to_string<N: ::std::borrow::Borrow<f64>>(value: N) -> String {
    let value = *value.borrow();
    if value.is_nan() { return "NaN".to_owned(); }
    if value == 0.0 { return "0".to_owned(); }
    if value < 0.0 { return format!("-{}", smelt_number_to_string(-value)); }
    if value.is_infinite() { return "Infinity".to_owned(); }
    let exponential = format!("{value:e}");
    let (mantissa, exponent) = exponential.split_once('e').unwrap_or((exponential.as_str(), "0"));
    let digits: String = mantissa.chars().filter(char::is_ascii_digit).collect();
    let k = i32::try_from(digits.len()).unwrap_or(i32::MAX);
    let n = exponent.parse::<i32>().unwrap_or(0) + 1;
    if k <= n && n <= 21 {
        let zeros = usize::try_from(n - k).unwrap_or(0);
        return digits + &"0".repeat(zeros);
    }
    if 0 < n && n <= 21 {
        let split = usize::try_from(n).unwrap_or(0);
        return format!("{}.{}", &digits[..split], &digits[split..]);
    }
    if -6 < n && n <= 0 {
        let zeros = usize::try_from(-n).unwrap_or(0);
        return format!("0.{}{}", "0".repeat(zeros), digits);
    }
    let sign = if n - 1 < 0 { '-' } else { '+' };
    let magnitude = (n - 1).abs();
    if k == 1 { return format!("{digits}e{sign}{magnitude}"); }
    format!("{}.{}e{sign}{magnitude}", &digits[..1], &digits[1..])
}

/// `console.log`'s number formatting: the spec's rule, but `-0` prints `-0`.
fn smelt_console_number<N: ::std::borrow::Borrow<f64>>(value: N) -> String { let value = *value.borrow(); if value == 0.0 && value.is_sign_negative() { return "-0".to_owned(); } smelt_number_to_string(value) }

/// A Smelt `throw` crossing an unwind boundary, keeping its class.
#[derive(Debug)]
struct SmeltPanic { class: String, message: String }
impl ::std::fmt::Display for SmeltPanic { fn fmt(&self, formatter: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result { write!(formatter, "{}: {}", self.class, self.message) } }
static SMELT_PANIC_HOOK: ::std::sync::Once = ::std::sync::Once::new();
/// Silence the panic report for Smelt-thrown payloads only.
fn smelt_install_panic_hook() { SMELT_PANIC_HOOK.call_once(|| { let previous = ::std::panic::take_hook(); ::std::panic::set_hook(Box::new(move |info| { if info.payload().downcast_ref::<SmeltPanic>().is_some() { return; } previous(info); })); }); }
/// Report a Smelt error through the panic channel, keeping its identity.
fn smelt_panic_throw(error: Box<dyn ::std::error::Error>) -> ! { smelt_install_panic_hook(); ::std::panic::panic_any(smelt_panic_payload(&*error)) }
/// Recover the message text a `catch` observes from a caught panic.
fn smelt_panic_message(panic: &(dyn ::std::any::Any + Send)) -> String { if let Some(payload) = panic.downcast_ref::<SmeltPanic>() { return payload.message.clone(); } if let Some(message) = panic.downcast_ref::<String>() { return message.clone(); } if let Some(message) = panic.downcast_ref::<&'static str>() { return (*message).to_owned(); } "JavaScript exception".to_owned() }
/// Recover the error class a `catch` observes from a caught panic.
fn smelt_panic_class(panic: &(dyn ::std::any::Any + Send)) -> String { panic.downcast_ref::<SmeltPanic>().map_or_else(|| "Error".to_owned(), |payload| payload.class.clone()) }
/// Build the unwind payload for a crate with no erased values.
fn smelt_panic_payload(error: &(dyn ::std::error::Error + 'static)) -> SmeltPanic { SmeltPanic { class: "Error".to_owned(), message: error.to_string() } }

// @smelt:prelude-end — generated program below
#[test]
fn test_adds() -> Result<(), Box<dyn std::error::Error>> {
    let _smelt_tmp_0: f64 = 1.0 + 2.0;
    let _smelt_tmp_1: bool = !({ let lhs: f64 = _smelt_tmp_0; let rhs: f64 = 3.0; (lhs.is_nan() && rhs.is_nan()) || (lhs == rhs && (lhs != 0.0 || lhs.is_sign_negative() == rhs.is_sign_negative())) });
    if _smelt_tmp_1 {
    return Err::<_, Box<dyn std::error::Error>>(std::io::Error::new(std::io::ErrorKind::Other, format!("{}", "expect(...).toBe(...) failed: expect(1 + 2).toBe(3) (<memory>:4:3)".to_owned())).into());
    } else {
    return Ok(());
    }
}

fn main() {}
